added placeholder json data and updated html to reflect proper file structure

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Quiz</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <title>Tal's Risky Re-Quizer!</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>JavaScript Fundamentals Quiz</h1>
+        <h1>Risky Quiz</h1>
         <button id="start-btn">Start Quiz</button>
         <div id="quiz-container" class="hide">
             <div id="question-container">
@@ -29,6 +29,6 @@
             <ul id="high-scores-list"></ul>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
